# bluecore-workflows

./: .gitignore  Dockerfile  README.md  compose-dev.yaml  compose.yaml  docker-compose.yaml  pyproject.toml  setup.cfg  webserver_config.py
.github/workflows/: dependency-updates.yml  publish.yml  stack-integration.yml  test.yml
config/: webserver_config.py
ils_middleware/dags/: alma.py  api_monitor.py  archive_loader.py  backup.py  bluecore.py  cornell.py  marc21_loader.py  marc2bf.py  queue_monitor.py  stanford.py
ils_middleware/dags/ingest/: record.py
ils_middleware/tasks/: bluecore.py  marc.py
ils_middleware/tasks/alma/: post_bfinstance.py  post_bfwork.py
ils_middleware/tasks/amazon/: alma_instance_s3.py  alma_work_s3.py  bluecore_records_s3.py  s3.py  sqs.py
ils_middleware/tasks/bluecore/: batch.py  storage.py
ils_middleware/tasks/folio/: build.py  graph.py  map.py  new.py
ils_middleware/tasks/folio/mappings/: bf_instance.py  bf_work.py
ils_middleware/tasks/general/: __init__.py  init.py  marc.py
ils_middleware/tasks/general/xslt/marc2bibframe2/: VERSION
ils_middleware/tasks/keycloak/: __init__.py  migrate_keycloak_roles.py
ils_middleware/tasks/sinopia/: email.py  local_metadata.py  login.py  metadata_check.py  rdf2marc.py
ils_middleware/tasks/symphony/: login.py  mod_json.py  new.py  overlay.py  request.py
keycloak-export/: bluecore-realm.json
scripts/: export-keycloak-realm.sh  start-dev-server.sh  update-marc2bibframe2.sh
tests/dags/: test_api_monitor.py  test_dags.py  test_monitor_institutions_messages.py
tests/fixtures/: bf.ttl
tests/helpers/: tasks.py
tests/keycloak/: server_mocks.py  test_functions.py  test_keycloak_auth_manager.py  test_webserver_config.py
tests/tasks/: test_bluecore.py
tests/tasks/alma/: test_post_bfinstance.py  test_post_bfwork.py
tests/tasks/amazon/: test_alma_instance_s3.py  test_alma_work_s3.py  test_bluecore_records_s3.py  test_s3.py  test_sqs.py
tests/tasks/bluecore/: test_batch.py  test_storage.py
tests/tasks/folio/: test_build.py  test_graph.py  test_map.py  test_new_inventory.py
tests/tasks/folio/mappings/: test_bf_instance.py  test_bf_work.py
tests/tasks/general/: test_init.py  test_marc.py
tests/tasks/sinopia/: test_email.py  test_local_metadata.py  test_metadata_check.py  test_rdf2marc.py  test_sinopia_login.py
tests/tasks/symphony/: test_mod_json.py  test_new.py  test_overlay.py  test_symphony_login.py  test_symphony_request.py
