[project]
name = "bluecore-workflows"
version = "0.1.0"
description = "Blue Core Workflows using Apache Airflow"
readme = "README.md"
authors = [{ name = "Jeremy Nelson", email = "jpnelson@stanford.edu"}]
requires-python = ">=3.12"

dependencies = [
    "pymarc",
    "sqlalchemy >= 1.3.18, <2",
    "typing-extensions>=4.0.0",
    "rdflib",
    "lxml",
    "folio-uuid",
    "folioclient",
    "numpy",
    "pendulum",
    "psycopg2-binary>=2.9.10",
    "boto3",
    "bluecore-models>=0.4.1",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.10.5",
    "apache-airflow-providers-amazon>=9.2.0",
]

dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "types-mock",
    "requests-mock",
    "ruff>=0.9.7",
    "apache-airflow-providers-postgres>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bluecore_workflow"]

[tool.mypy]
ignore_missing_imports = true
